#19443: compilability of daily-alpha-nbms.

--- a/junit/build.xml
+++ b/junit/build.xml
@@ -32,9 +32,7 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="external">
           <include name="junit*.jar"/>
         </fileset>
-         <fileset dir="../openide/netbeans/lib">
-            <include name="openide*.jar" />
-         </fileset>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
       </classpath>
     </javac>
   </target>
@@ -89,11 +87,8 @@ Microsystems, Inc. All Rights Reserved.
       <exclude name="org/netbeans/junit/**"/>
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <fileset dir="../openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <!-- XXX -->
-        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
         <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
         <fileset dir="external">
           <include name="junit*.jar"/>
