--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -40,6 +40,7 @@ config.fixedmodules.platform=core, \
         openide, \
         openide/deprecated, \
         core/deprecated, \
+        java/srcmodel, \
         core/ui, \
         core/windows
 config.modules.platform=autoupdate, \
