--- a/web.debug/build.xml
+++ b/web.debug/build.xml
@@ -39,9 +39,9 @@ Microsystems, Inc. All Rights Reserved.
          <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/j2eeserver.jar"/>
          <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
          <pathelement location="${nb_root}/web/jspsyntax/netbeans/modules/jsp-syntax.jar"/>
-         <fileset dir="${nb_root}/openide">
-           <include name="netbeans/lib/openide*.jar"/>
-         </fileset>
+        <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
+        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${nb_root}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
         <!-- Hopefully set up by nbbuild/build.xml: -->
         <pathelement location="${jdkhome}/lib/tools.jar"/>
       </classpath>
