--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -134,6 +134,7 @@ Microsystems, Inc. All Rights Reserved.
        <classpath>
          <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
          <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
+         <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
          <pathelement location="${nb_root}/httpserver/netbeans/modules/httpserver.jar"/>
          <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <fileset dir="${nb_root}/core/external">
