corrected spelling of antialiasing

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -173,7 +173,7 @@ PROP_base_toolbarVisible=Show Toolbar
 HINT_base_toolbarVisible=If True, display the editor toolbar.
 
 PROP_base_textAntialiasing=Text Antialiasing
-HINT_base_textAntialiasing=If true, the text anitalising will be used for font rendering.
+HINT_base_textAntialiasing=If true, text antialiasing will be used for font rendering.
 
 
 # Component colorings related stuff
