#28048 (#19443) Projects tab moved to projecs module. (Removed the hack used to by pass a problem with providing project node to the tab component). Also created actions for presenting default explorer tab in menu (filesystems, runtime, projects) and also the components with old root nodes.

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -207,3 +207,9 @@ LBL_ProjectCloseAction=Close Project
 CTL_MemoryMeterAction=Memory Meter
 
 MSG_Preparing_options=Preparing options...
+
+# ViewFilesystemsTabAction
+CTL_ViewFilesystemsTabAction=Filesystems
+# ViewRuntimeTabAction
+CTL_ViewRuntimeTabAction=Runtime
+
