--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -195,12 +195,12 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module apisupport..."/>
     <ant dir="../apisupport" target="netbeans"/>
   </target>
-  <target name="all-apisupport/ant" depends="all-openide,all-core,all-apisupport,all-ant">
+  <target name="all-apisupport/ant" depends="all-openide,all-core,all-ant">
     <echo message="Building module apisupport/ant..."/>
     <ant dir="../apisupport/ant" target="netbeans"/>
   </target>
   <!-- #27098: MakeParserDB requires several modules to have been successfully built: -->
-  <target name="all-apisupport/apidocs" depends="all-openide,all-apisupport,all-core,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated">
+  <target name="all-apisupport/apidocs" depends="all-openide,all-core,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated">
     <echo message="Building module apisupport/apidocs..."/>
     <ant dir="../apisupport/apidocs" target="netbeans"/>
   </target>
