--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -102,7 +102,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
-        <genlist targetname="nbm" outputfiledir="${nbext_root}/netbeans"/>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     
