--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -82,7 +82,7 @@ Microsystems, Inc. All Rights Reserved.
     <target name="netbeans" depends="jars,release,javahelp">
         <for-each locations="lib"/>
 
-        <genlist targetname="nbm" outputfiledir="${nbext_root}/netbeans"/>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="reload" depends="init,compile" description="Test module inside running IDE (API Support with Ant required).">
