--- a/apisupport.ant/build.xml
+++ b/apisupport.ant/build.xml
@@ -48,7 +48,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars" description="Build complete module.">
-        <genlist targetname="nbm" outputfiledir="../../nbbuild/netbeans"/>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans" description="Build standalone NBM.">
