--- a/apisupport.apidocs/build.xml
+++ b/apisupport.apidocs/build.xml
@@ -47,7 +47,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,parser-db,open-apis" description="Build complete module.">
-        <genlist targetname="nbm" outputfiledir="../../nbbuild/netbeans"/>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans" description="Build standalone NBM.">
