--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -30,7 +30,7 @@ Microsystems, Inc. All Rights Reserved.
   <!-- These are the primary targets. -->
 
   <target depends="jars" name="netbeans">
-    <genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
