--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -65,8 +65,8 @@ Microsystems, Inc. All Rights Reserved.
         </copy>
     </target>
 
-    <target name="netbeans" depends="jars,release" description="Build everything.">
-        <genlist targetname="nbm" outputfiledir="../../nbbuild/netbeans"/>
+    <target name="netbeans" depends="jars,release">
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans" description="Build NBM.">
