--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -74,7 +74,7 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
   </target>
 
   <target name="netbeans" depends="jars,release" description="Build module.">
-    <genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans" description="Build module NBM file.">
