--- a/settings/build.xml
+++ b/settings/build.xml
@@ -51,8 +51,8 @@ Microsystems, Inc. All Rights Reserved.
         </locjar>
     </target>
 
-    <target name="netbeans" depends="jars" description="Build everything.">
-        <genlist targetname="nbm" outputfiledir="${nb_all}/nbbuild/netbeans"/>
+    <target name="netbeans" depends="jars">
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans" description="Build NBM.">
