Changed testtype attr.

--- a/properties/test/build.xml
+++ b/properties/test/build.xml
@@ -28,7 +28,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xtest.home" location="../../xtest"/>
 
     <!-- default testtypes, attributes used when no value is supplied from command line -->
-    <property name="xtest.testtype" value="qa-fuctional"/>
+    <property name="xtest.testtype" value="qa-functional"/>
     <property name="xtest.attribs" value="all"/>
 
     <!-- Points to antfile with module's harness.
