--- a/openide/build.xml
+++ b/openide/build.xml
@@ -615,7 +615,7 @@ To force them to be rebuilt, run again with -Dopen-apis-force-rebuild=true
              author="false"
              version="false"
              maxmemory="64m"
-             stylesheetfile="api/doc/open-apis.css" 
+	     stylesheetfile="api/doc/javadoc.css"
     >
       <sourcepath>
         <pathelement location="api/doc"/>
