Changed config files for xtest.

--- a/properties/test/build.xml
+++ b/properties/test/build.xml
@@ -29,7 +29,7 @@ Microsystems, Inc. All Rights Reserved.
 
     <!-- default testtypes, attributes used when no value is supplied from command line -->
     <property name="xtest.testtype" value="qa-functional"/>
-    <property name="xtest.attribs" value="suite2"/>
+    <property name="xtest.attribs" value="all"/>
 
     <!-- Points to antfile with module's harness.
          Targets from that antfile is called from this build.xml -->
