IZ=28269 - Move group functionality to different module

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -67,7 +67,8 @@ config.modules.superslim=classfile, \
         openidex, \
         projects, \
         text, \
-        utilities
+        utilities, \
+        utilities/group
 
 config.fixedmodules.slim=${config.fixedmodules.superslim}
 config.modules.slim=${config.modules.superslim}, \
