--- a/utilities/src/org/netbeans/modules/utilities/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/utilities/Bundle.properties
@@ -13,7 +13,7 @@
 # manifest.mf
 OpenIDE-Module-Name=User Utilities
 OpenIDE-Module-Display-Category=Infrastructure
-OpenIDE-Module-Short-Description=Support for file searching, bookmarks, and groups of objects.
+OpenIDE-Module-Short-Description=Support for file searching, bookmarks.
 OpenIDE-Module-Long-Description=The User Utilities module provides miscellaneous pieces of functionality such as support \
-for URLs (bookmarks), groups of objects, and file searching. It also provides the open file feature, \
+for URLs (bookmarks), and file searching. It also provides the open file feature, \
 which helps you open a file in a previously unmounted filesystem.
