Removed some unused keys. Couple of localized strings moved to proper location.

--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -20,46 +20,14 @@ LBL_ServletSettingsNode=JSP & Servlets Settings
 HINT_ServletSettingsNode=Settings for Web modules.
 
 CTL_servlet_settings=JSP & Servlets
-EXC_Server_Not_Started=The server could not be started.
-EXC_Internal_Not_Started=The internal HTTP server must be running to execute servlets.
-# 0...name of the class of the servlet
-EXC_Servlet_Not_Loaded=Servlet {0} could not be loaded.
-CTL_Exec_Name=Servlet Execution
-CTL_Debug_Name=Servlet Debugging
 
 #JSPExecutor.class                 
-CTL_JSP_Execution=JSP/HTML Execution
-MSG_BadDataObject=This object cannot be executed using the current executor. Check the Executor value on the Properties | Execution tab.
 MSG_BrowserExecutorHint=\
     {URL} = URL of the page to be loaded by the web browser\n
 
-#properties and hints
-PROP_Host=Host
-HINT_Host=Host that is allowed to connect to the HTTP Server.
-PROP_Port=Port
-HINT_Port=Port of the HTTP Server.
-PROP_Running=Running
-HINT_Running=If True, the HTTP Server is running.
-PROP_ServletBase=Servlet Relative URL
-HINT_ServletBase=URL from which all servlets are accessible by default.
-
-
-# WebLoaderBeanInfo
-PROP_Name=Name
-HINT_Name=Name of Internet object type.
-PROP_Extensions=Extensions
-HINT_Extensions=A set of possible extensions for Internet files.
-                  
+#ServletDataNode (in jsploader package)
 PROP_requestParams=Request Parameters
-# [PENDING] with or without leading question mark? --jglick
 HINT_requestParams=HTTP query string to pass to the page.
-PROP_execution=Executor
-PROP_debuggerType=Debugger
-HINT_execution=Execution style to use, among the installed executors.
-HINT_debuggerType=Style of debugger to use for this file.
-
-# ApplContext
-CTL_NetBeansContextName=IDE Filesystems
 
 # WebExecSupport
 # [PENDING] do you in fact mean just "JSP"?
@@ -68,19 +36,12 @@ EXC_Invalid_Processor=Cannot create process. Check that a valid external browser
 #Represents default IDE's web browser for exec/debug of pages
 CTL_defaultBrowser=<default>
 
-#WebExecUtil
-CTL_BadCompilerType=No servlet was found to execute.
-
 # EditQueryStringAction
 LBL_EditQueryString=Set Request Parameters...
 CTL_QueryStringLabel=Query String:
 CTL_QueryStringTitle=Set HTTP Request Parameters (Query String)
 
 #ServletSettingsBeanInfo
-PROP_WebBrowser=Web Browser
-HINT_WebBrowser=Whether to use the internal or an external web browser.
-PROP_ExternalBrowser=External Browser
-HINT_ExternalBrowser=Path to the external web browser.
 CTL_InternalBrowser=Internal
 CTL_ExternalBrowser=External
 PROP_COMPILER=Default JSP Servlet Compiler
@@ -91,23 +52,13 @@ HINT_COMPILE_ERRORPAGE=If True, when compiling a JSP, also compile its error pag
 PROP_COMPILE_INCL_FORW=Also Compile Incl. and Forw.
 HINT_COMPILE_INCL_FORW=If True, when compiling a JSP, also compile pages referenced by <jsp:forward> and <jsp:include>.
 
-#HtmlViewComponent                  
-CTL_HTML_Output=HTML Output
-
 # Browsers
-CTL_browser_settings=Browsers
 PROP_WWWBrowser=Web Browser
 HINT_WWWBrowser=Browser used to display WWW pages
-PROP_XMLBrowser=XML Browser
-HINT_XMLBrowser=Browser used to display XML pages
-PROP_WAPBrowser=WAP Browser
-HINT_WAPBrowser=Browser used to display Wireless Application Protocol (WAP) pages
 CTL_EXTBROWSER_SETTINGS=External Browser Settings
-LBL_BROWSER_TYPE=Browser Type
 
 CTL_lang_html=HTML
 CTL_lang_xml=XML
-CTL_lang_wml=WML
 CTL_lang_plain=Plain
 CTL_scrlang_java=Java
 CTL_scrlang_plain=No Coloring
@@ -138,9 +89,6 @@ Services/org-netbeans-modules-web-core-ServletSettings.settings=JSP & Servlet
 Mount/java/org-netbeans-modules-web-core-resources-library-servlet.xml=Servlet 2.3 API Library
 Mount/Javadoc/org-netbeans-modules-web-javadoc-servlet.xml=Servlet 2.3 API Javadoc
 Mount/Javadoc/org-netbeans-modules-web-javadoc-jsp.xml=JSP 1.2 API Javadoc
-
-#JspServlet
-MSG_CompilationFailed=Compilation of the requested JSP page failed. Please see compilation errors in the Output Window.
 
 #Mount web module dialog
 PROP_SHOW_MSG_DIALOG=Show Web Module Added Info
