--- a/extbrowser/webclient/build.xml
+++ b/extbrowser/webclient/build.xml
@@ -20,13 +20,15 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nb_root" location="../.."/>
   <property name="nbm_alias" value="nb_ide"/>
 
-  <property name="webclientlib" location="C:\Program Files\mozilla.org\M099\javadev\lib\webclient_1_2_win32.jar"/>
-
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
-  <target name="compile">
-    <javac srcdir="../src" destdir="../src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
+  <target name="init">
+    <ant dir="external" target="unscramble"/>
+  </target>
+
+  <target name="compile" depends="init">
+    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <include name="org/netbeans/modules/webclient/"/>
       <classpath>
         <!--<pathelement location="patches"/>-->
@@ -34,7 +36,8 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="../../openide/netbeans/lib">
           <include name="openide*.jar" />
         </fileset>
-        <pathelement location="${webclientlib}"/>
+        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="external/webclient-1.2.jar"/>
         <fileset dir="${nb_root}/httpserver/external">
           <include name="webserver*.jar"/>
           <include name="servlet-2.2.jar"/>
@@ -47,25 +50,25 @@ Microsystems, Inc. All Rights Reserved.
   <target name="jars" depends="compile">
     <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
-    <copy file="../webclient.mf" tofile="../webclient-subst.mf" filtering="on"/>
+    <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <jar jarfile="netbeans/modules/webclient.jar"
-         manifest="../webclient-subst.mf"
-         basedir="../src"
+         manifest="manifest-subst.mf"
+         basedir="src"
 	 excludesfile="../../nbbuild/standard-jar-excludes.txt"
 	 compress="false"/>
   </target>
 
   <target name="release">
     <mkdir dir="netbeans/lib/ext"/>
-    <copy file="${webclientlib}" tofile="netbeans/lib/ext/webclient.jar"/>
+    <copy file="external/webclient-1.2.jar" tofile="netbeans/lib/ext/webclient.jar"/>
   </target>
 
   <target name="netbeans" depends="jars,release"/>
 
   <target name="nbm" depends="netbeans">
-    <makenbm file="../webclient.nbm"
+    <makenbm file="webclient.nbm"
              topdir="."
-	     manifest="../webclient-subst.mf"
+	     manifest="manifest-subst.mf"
 	     homepage="http://webclient.${homepage.base}/"
 	     distribution="http://${dist.base}/webclient.nbm">
       <license file="${license.file}"/>
@@ -75,12 +78,12 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="clean">
     <delete>
-      <fileset dir="../src">
-        <include name="org/netbeans/modules/webclient/*.class"/>
+      <fileset dir="src">
+        <include name="**/*.class"/>
       </fileset>
     </delete>
-    <delete file="../webclient-subst.mf"/>
-    <delete file="../webclient.nbm"/>
+    <delete file="manifest-subst.mf"/>
+    <delete file="webclient.nbm"/>
     <delete dir="netbeans"/>
     <delete dir="Info"/>
   </target>
