#28240: ability to suppress deprecation warnings during startup.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -1,8 +1,15 @@
 netbeans.dest=netbeans
 test.user.dir=testuserdir
-sanitystart.args.additional= 
 tryme.args.additional=
 build.compiler.debug=on
+
+# Additional parameters to pass to NetBeans as it is started.
+# Normally you ought not change this.
+# However those running automated builds may wish to use:
+# -J-DErrorManager.minimum=17
+# (please don't ask why it is 17)
+# which will suppress a variety of mostly harmless deprecation warnings.
+sanitystart.args.additional= 
 
 # Useful for "always successful" build, when you don't care of some
 # particular (and currently broken) modules
