Added vcscore to generate the javadoc for it's APIs. This is a fix of issue #28469.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -248,6 +248,7 @@ config.fixedmodules.javadoc=openide, \
         lexer, \
         openidex/looks, \
         mdr, \
+        vcscore, \
         xml/api
 config.modules.javadoc=
 
