Removing unused keys

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -16,11 +16,9 @@ OpenIDE-Module-Long-Description=The External Browser module enables the integrat
 OpenIDE-Module-Short-Description=Enables integration of external web browsers with the IDE.
 
 # UnixBrowserImpl
-MSG_creating_new_window=Creating new window 
 MSG_Running_command=Running command {0}
 MSG_Cant_run_netscape=Cannot execute {0} and create new browser window. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
 MSG_look_for_win=Looking for created window
-MSG_err_code=error code returned :
  
 # NbDdeBrowserImpl
 MSG_startingBrowser=Starting browser...
@@ -50,18 +48,14 @@ Browsers node. Select the external browser type and modify the Browser \
 Executable property if necessary.
 MSG_BrowserExecutorHint={URL} = URL of the page to be loaded by the web browser\n
 MSG_use_win=Reusing old window 
-MSG_done=Done
+
 # Options API
 LBL_settings=External HTML Browser
-PROP_browser=Browser
-HINT_browser=Name of preferred browser.
-PROP_start=Start Browser If Not Running
-HINT_start=Determines if browser should be started.
-LBL_true=True
-LBL_false=False
-PROP_close=Close browser window
-HINT_close=
-ERR_not_installed=Cannot install external browser.
+
+# Not visible now.
+# PROP_start=Start Browser If Not Running
+# HINT_start=Determines if browser should be started.
+
 ERR_cant_locate_dll=Unable to locate extbrowser.dll library. This library contains native code neceseary for using the external HTML browser on Windows platform.
 ERR_cant_activate_browser=Error: Cannot activate browser
 
