--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -72,7 +72,7 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../tools/test/qa-functional/src"/>
             <fileset dir="../text-edit/test/qa-functional/src"/>
             <fileset dir="../tree-edit/test/qa-functional/src"/>
-         </copy>
+            </copy>
         <ant antfile="${xtest.module_harness.antfile}" dir="." target="compiler-launcher"/>
     </target>
     
@@ -138,6 +138,8 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${netbeans.home}/lib/openide.jar"/>
         <pathelement location="${netbeans.home}/lib/core.jar"/>
         <pathelement location="${netbeans.home}/modules/autoload/ext/tax.jar"/>
+        <pathelement location="${netbeans.home}/modules/autoload/java-src-model.jar"/>
+        <pathelement location="${netbeans.home}/modules/autoload/openide-execution.jar"/>
         <pathelement location="${netbeans.home}/modules/xml-core.jar"/>
         <pathelement location="${netbeans.home}/modules/css.jar"/>
         <!--
