#28470 Hiding InputOuput null inners from API. Patching bytecode. Also added test cases to CompatilityTest.

--- a/openide.compat/test/build.xml
+++ b/openide.compat/test/build.xml
@@ -63,6 +63,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo>Generating compatibility APIs from ${netbeans.home}/lib/openide.jar</echo>
         <patchclass library="${netbeans.home}/lib/ext/boot.jar" source="${netbeans.home}/lib/openide.jar" targetdir="gensrc" />
         <patchclass library="${netbeans.home}/lib/ext/boot.jar" source="${netbeans.home}/modules/autoload/openide-compiler.jar" targetdir="gensrc" />
+        <patchclass library="${netbeans.home}/lib/ext/boot.jar" source="${netbeans.home}/modules/autoload/openide-io.jar" targetdir="gensrc" />
     </target>
     
     <!-- This calls common clean process. -->
