--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -140,7 +140,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${netbeans.home}/modules/autoload/ext/tax.jar"/>
         <pathelement location="${netbeans.home}/modules/autoload/java-src-model.jar"/>
         <pathelement location="${netbeans.home}/modules/autoload/openide-execution.jar"/>
-        <pathelement location="${netbeans.home}/modules/xml-core.jar"/>
+        <pathelement location="${netbeans.home}/modules/autoload/xml-core.jar"/>
         <pathelement location="${netbeans.home}/modules/css.jar"/>
         <!--
         <pathelement location="${netbeans.home}/modules/xml-catalog.jar"/>
